		p->ctx_alloc_oldest
		p->ctx_dealloc_signals

2010-07-21
	Version 2.3.3 Released

2010-07-23
	* libdisasm/machine.dat: Bug fixed in instruction bt_rm32_r32. The 4th field
		'SKIP' has been replaced by 'REG'. The Intel manual used as a reference
		had an error in the instruction format specification.
	* m2s-objdump.c: Bug fixed after 'if' statement.


2010-07-26
	* syscall.c: system calls 'sched_getparam' and 'sched_setparam' implemented.
	* syscall.c: system call 'clock_getres' implemented.
	* syscall.c: system calls 'sched_get_priority_min' and 'sched_get_priority_max'
		implemented.
	* Makefile.am: flags '-Werror' removed in all Makefiles.

2010-07-27
	* disasm.c: qualifier 'volatile' added to 'inst' parameter to avoid
		compiler optimizations in 'memset' call.

2010-09-26
	* libm2skernel/memory.c: mem_page_t structure changed to provide a pointer to
		the page data instead of attaching it to the structure. By doing this,
		a benchmark can allocate large amounts of memory without causing
		hyper-paging if the allocated memory pages are not accessed.

2010-09-29
	* syscall.c: system calls 'getdents' and 'getdents64' implemented.
	* lidisasm/machine.dat, libm2skernel/machine.c: instruction 'pause' implemented.

2010-10-02
	* memory.c: flag 'mem_access_modif' added as a state for the memory page.
	* syscall.c: system call 'msync' added, but left blank as if it was ignored.
	* syscall.c, context.c: system call 'exit_group' fixed.
		Function 'ctx_finish_group' implemented.
	* syscall.c: system call 'tgkill' implemented.

2010-10-24
	* rf.c, m2s.h: register renaming mechanism upgraded to support stack-based
		x86 floating-point operations. In the prior scheme, all FP uops were
		dependent on each other. The new mechanism allows parallelism to
		be exploited among FP uops.
	* processor.c: two register files supported, one for integer and other for
		floating-point registers. Statistics are shown separately for both.

2010-10-26
	Version 2.4 Released
